# Probabilistic-ICP

./: .gitignore  README.md
meshes/: monkey.ply
src/: CMakeLists.txt
src/features/: CMakeLists.txt
src/features/src/: narf_keypoint_extraction.cpp  test_features.cpp  test_full_corr.cpp  test_narf.cpp  test_sift_depth.cpp  test_sift_normals.cpp
src/p_icp/: CMakeLists.txt
src/p_icp/include/p_icp/: picp_solver.hpp  utils.hpp
src/p_icp/src/: picp_solver.cpp  test_picp.cpp  utils.cpp
